# plover-nasin-pi-tenpo-lili

./: .gitignore  MANIFEST.in  setup.cfg
plover_nasin_pi_tenpo_lili/: \  system.py
plover_nasin_pi_tenpo_lili.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plover_nasin_pi_tenpo_lili/dictionaries/: nasin-pi-tenpo-lili-base.json  nasin-pi-tenpo-lili-base.py  nasin-pi-tenpo-lili-commands.json
