[metadata]
name = plover-nasin-pi-tenpo-lili
version = 0.0.1
description = Plover plugin to use nasin pi tenpo lili, a toki pona stenography theory.
long_description =  file: README.md
long_description_content_type = text/markdown
author = aqwek
url = https://github.com/aqwek/plover-nasin-pi-tenpo-lili
keywords = plover plover_plugin 

[options]
zip_safe = True
setup_requires =
  setuptools>=79.0.0 # just an example, might need to be higher
install_requires =
  plover>=4.0.0.dev10 # or higher, especially for GUI plugins
  plover-dict-commands
packages =
	plover_nasin_pi_tenpo_lili
include_package_data = True

[options.entry_points]
plover.system =
	nasin pi tenpo lili = plover_nasin_pi_tenpo_lili.system
